--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "firebase": "^10.10.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
+    "pg": "^8.11.4",
     "sequelize": "^6.33.0",
     "uuid": "^9.0.1"
   },
