--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-jwt": "^8.4.1",
     "firebase": "^10.10.0",
     "jsonwebtoken": "^9.0.2",
+    "mssql": "^10.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
     "pg": "^8.11.5",
